# cps_rl

./: CMakeLists.txt  LICENSE  README.md  package.xml
battery_rl/: CMakeLists.txt  package.xml
battery_rl/controllers/mavic_collect_expert_data/: mavic_collect_expert_data.py  pretrain.py
battery_rl/controllers/mavic_collect_expert_data/pytorch_models/: data.npz  pretrained_actor.pth
battery_rl/controllers/mavic_finetune_env/: mavic_finetune_env.py
battery_rl/controllers/mavic_test_env/: mavic_test_env.py
battery_rl/controllers/mavic_train_env/: mavic_train_env.py
battery_rl/controllers/rosbot_collect_expert_data/: rosbot_collect_expert_data.py
battery_rl/controllers/rosbot_finetune_env/: rosbot_finetune_env.py
battery_rl/controllers/rosbot_test_env/: rosbot_test_env.py
battery_rl/launch/: mavic_collect_expert_data.launch  mavic_finetune.launch  mavic_test.launch  mavic_test_battery.launch  mavic_test_real2sim.launch  mavic_test_vanilla.launch  mavic_train.launch  rosbot_collect_expert_data.launch  rosbot_finetune.launch  rosbot_test.launch  rosbot_test_battery.launch  rosbot_test_real2sim.launch  rosbot_test_vanilla.launch  rosbot_train.launch
battery_rl/src/envs/: mavic_env.py  rosbot_env.py
battery_rl/worlds/: .rosbot_train.wbproj  mavic_collect_expert_data.wbt  mavic_finetune.wbt  mavic_test.wbt  mavic_test_battery.wbt  mavic_test_real2sim.wbt  mavic_test_vanilla.wbt  mavic_train.wbt  rosbot_collect_expert_data.wbt  rosbot_finetune.wbt  rosbot_test.wbt  rosbot_test_battery.wbt  rosbot_test_real2sim.wbt  rosbot_test_vanilla.wbt  rosbot_train.wbt
(+14 files in other folders)
